# invoice-data-extraction-reporting

./: .gitignore  NOTES.MD  README.md  main.py  pyproject.toml
src/invoice_extractor/: __init__.py  exporters.py  parser.py  schemas.py  templates.py
tests/: test_parser.py
