[project]
name = "invoice-data-extraction-reporting"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "pdf2image>=1.17.0",
    "pdfplumber>=0.11.10",
    "pillow>=12.2.0",
    "pydantic>=2.13.4",
    "pytesseract>=0.3.13",
]

[dependency-groups]
dev = [
    "ipykernel>=7.3.0",
    "ipython>=9.14.1",
    "pytest>=9.1.1",
]
